.provarCaches/00D6C0000000xA6UAI/objects/sked__Job_Offer__c.object
<CustomObject>
    <description>An offer made to multiple resources for a job or subset of a job</description>
    <fields>
        <fullName>sked__Created_By_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was the offer created from an allocated job by a resource?</description>
        <label>Created By Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked__Job__c</fullName>
        <description>The job associated with the offer</description>
        <label>Job</label>
        <referenceTo>sked__Job__c</referenceTo>
        <relationshipLabel>Job Offers</relationshipLabel>
        <relationshipName>Job_Offers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sked__Resource_Requirement__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>The (optional) resource requirement associated with the offer</description>
        <label>Resource Requirement</label>
        <referenceTo>sked__Resource_Requirement__c</referenceTo>
        <relationshipLabel>Job Offers</relationshipLabel>
        <relationshipName>Job_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked__Status__c</fullName>
        <description>The overall status of the offer</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Filled</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Job Offer</label>
    <nameField>
        <displayFormat>JO-{00000}</displayFormat>
        <label>Job Offer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>sked__RRBelongsSameJob</fullName>
        <active>true</active>
        <description>Ensures that the resource requirement this job offer points to, if exists, belongs to the same job that this offer points to.</description>
        <errorConditionFormula>AND( NOT( ISBLANK( sked__Resource_Requirement__c ) ) , NOT( ISPICKVAL( sked__Resource_Requirement__r.sked__Job_Status__c , &apos;Cancelled&apos;) ) , NOT( ISPICKVAL(  sked__Job__r.sked__Job_Status__c , &apos;Cancelled&apos;) ) , sked__Resource_Requirement__r.sked__Job__c  &lt;&gt;  sked__Job__c )</errorConditionFormula>
        <errorMessage>Resource requirement, if specified, must belong to the same job.</errorMessage>
    </validationRules>
</CustomObject>